tests/ui/lang-items/assoc-lang-items.stderr
error[E0522]: definition of an unknown lang item: `dummy_lang_item_1`
  --> $DIR/assoc-lang-items.rs:18:5
   |
LL |     #[lang = "dummy_lang_item_1"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown lang item `dummy_lang_item_1`

error[E0522]: definition of an unknown lang item: `dummy_lang_item_2`
  --> $DIR/assoc-lang-items.rs:21:5
   |
LL |     #[lang = "dummy_lang_item_2"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown lang item `dummy_lang_item_2`

error[E0522]: definition of an unknown lang item: `dummy_lang_item_3`
  --> $DIR/assoc-lang-items.rs:24:5
   |
LL |     #[lang = "dummy_lang_item_3"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown lang item `dummy_lang_item_3`

error[E0522]: definition of an unknown lang item: `dummy_lang_item_4`
  --> $DIR/assoc-lang-items.rs:31:5
   |
LL |     #[lang = "dummy_lang_item_4"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown lang item `dummy_lang_item_4`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0522`.
